@@ -1,4 +1,5 @@
-TESTS = test_filenames test_tags test_audio test_filesize test_picture
+TESTS = test_filenames_mp4 test_filenames_mp3 test_tags_mp4 test_tags_mp3 test_audio_mp4 test_audio_mp3 test_filesize_mp4 test_filesize_mp3 
+# NOT IN RELEASE 1.0!  test_picture_mp4 test_picture_mp3
 
 EXTRA_DIST = $(TESTS) funcs.sh srcdir
 
